--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/nytm/wf-kyt-starter/issues"
   },
+  "kyt": {
+    "version": "^0.2.0"
+  },
   "homepage": "https://github.com/nytm/wf-kyt-starter#readme"
 }
